adds intro to dev environment

--- a/config.yaml
+++ b/config.yaml
@@ -35,6 +35,17 @@ Standards:
         UID: VvrMFH
         Path: /intro-to-debugging/intro-to-debugging.md
   -
+    Title: Intro to Dev Environment
+    Description: Intro to Command Line
+    UID: QkZshi
+    SuccessCriteria:
+      - success criteria
+    ContentFiles:
+      -
+        Type: Lesson
+        UID: SxcEt0
+        Path: /intro-to-dev-environment/intro-to-command-line.md
+  -
     Title: Intro To Functions
     Description: Invoking and Defining Functions
     UID: e30a742083b7afa72ec565afafb9f64b
