--- a/config.yaml
+++ b/config.yaml
@@ -200,6 +200,21 @@ Standards:
         UID: p4Pb0s
         Path: /representing-data/practice-representing-data.md
   -
+    Title: Nested Data and Nested Loops
+    Description: "Nested Lists and Dictionaries, Nested Loops"
+    UID: DcrO5J
+    SuccessCriteria:
+      - success criteria
+    ContentFiles:
+      -
+        Type: Lesson
+        UID: PuRG5U
+        Path: /nested-data-and-nested-loops/nested-lists-and-dictionaries.md
+      -
+        Type: Lesson
+        UID: Mo0XXv
+        Path: /nested-data-and-nested-loops/nested-loops.md
+  -
     Title: Big O
     Description: Time and Space Complexity, Big O Notation, Big O Analysis
     UID: f2703dfead197309bf41c0a2d8ff1daf
