--- a/config.yaml
+++ b/config.yaml
@@ -183,11 +183,15 @@ Standards:
         Path: /intro-to-functions/defining-functions.md
   -
     Title: Functions, Continued
-    Description: How to Read Documentation
+    Description: Variable Scope, How to Read Documentation
     UID: 6736abef6aad93ad0fdb8d10e1849b62
     SuccessCriteria:
       - success criteria
     ContentFiles:
+      -
+        Type: Lesson
+        UID: k7GVFX
+        Path: /functions-continued/variable-scope.md
       -
         Type: Lesson
         UID: 0ea7bd4c9be9469bd0232744edf2a80d
