--- a/config.yaml
+++ b/config.yaml
@@ -337,3 +337,99 @@ Standards:
         Type: Lesson
         UID: tSg96d
         Path: /intro-to-git/activity-git-history.md
+  -
+    Title: Intro To Object-Oriented Programming
+    Description: "What is OOP?, Defining Classes, Creating Instances, Instance Methods, Practice: Intro to OOP"
+    UID: dfa81f9898dba334bbda0cdf7b32c9f6
+    SuccessCriteria:
+      - success criteria
+    ContentFiles:
+      -
+        Type: Lesson
+        UID: 56c780d52a039c59bdbc844d9de154f1
+        Path: /intro-to-object-oriented-programming/what-is-oop.md
+      -
+        Type: Lesson
+        UID: 69b59c74feaa92e40b2a5b238e546de4
+        Path: /intro-to-object-oriented-programming/defining-classes.md
+      -
+        Type: Lesson
+        UID: 3e5c6be7ed788302010d3515fcc938d4
+        Path: /intro-to-object-oriented-programming/creating-instances.md
+      -
+        Type: Lesson
+        UID: 04e31443d6167d3ffb3b9728804b82ff
+        Path: /intro-to-object-oriented-programming/instance-methods.md
+      -
+        Type: Lesson
+        UID: ecf610c94fd56dbcc8dcfa0f774342ec
+        Path: /intro-to-object-oriented-programming/practice-intro-to-oop.md
+  -
+    Title: Intro To OOP, Cont'd
+    Description: "Testing Objects, Projects With Many Files"
+    UID: 984638c124b588e0298c09ecf6316b44
+    SuccessCriteria:
+      - success criteria
+    ContentFiles:
+      -
+        Type: Lesson
+        UID: 613e336a5248766041367235ba6bca58
+        Path: /intro-to-oop-contd/testing-objects.md
+      -
+        Type: Lesson
+        UID: f6e28e9bf4561ab0a666f1e046e52a83
+        Path: /intro-to-oop-contd/projects-with-many-files.md
+  -
+    Title: OOP Relationships
+    Description: "OOP Relationships, Inheritance, Composition, Practice: Inheritance, Practice: Composition"
+    UID: 6aa5a5d28d6c39bc5381c77a1e222232
+    SuccessCriteria:
+      - success criteria
+    ContentFiles:
+      -
+        Type: Lesson
+        UID: 017e51e2f57ac181b0a4b89dd39e598d
+        Path: /oop-relationships/oop-relationships.md
+      -
+        Type: Lesson
+        UID: 13417be7f72da4eeb97ff9ce94f5df6a
+        Path: /oop-relationships/inheritance.md
+      -
+        Type: Lesson
+        UID: b1f8cf43e4ccc8039055e4f7b8cf6411
+        Path: /oop-relationships/composition.md
+      -
+        Type: Lesson
+        UID: e760a85b2f7705d0d4e42d26947b6f6c
+        Path: /oop-relationships/practice-inheritance.md
+      -
+        Type: Lesson
+        UID: eedb1f62ad21bb5e478b414c25e17998
+        Path: /oop-relationships/practice-composition.md
+  -
+    Title: Python OOP
+    Description: "Intro to Design Patterns, Intro to Decorators, Static Methods and Class Methods"
+    UID: 53ff8a562d3c8ba58b02a9b3ef612df5
+    SuccessCriteria:
+      - success criteria
+    ContentFiles:
+      -
+        Type: Instructor
+        UID: 79ab0f6a47bee8ef7904918484d14ec3
+        Path: /python-oop/python-oop.instructor.md
+      -
+        Type: Lesson
+        UID: 2e1f6e9e38e6f594e6a86cfb15b494ed
+        Path: /python-oop/intro-to-design-patterns.md
+      -
+        Type: Lesson
+        UID: 533f8f6dada668c242e332613c0052ef
+        Path: /python-oop/intro-to-decorators.md
+      -
+        Type: Lesson
+        UID: fec017fec392028400734ad89c0ebde2
+        Path: /python-oop/static-methods-and-class-methods.md
+      -
+        Type: Lesson
+        UID: d70afaf7a11cea145281fd76ca10f1ab
+        Path: /python-oop/practice-static-methods-and-class-methods.md
