--- a/config.yaml
+++ b/config.yaml
@@ -380,8 +380,8 @@ Standards:
         UID: f6e28e9bf4561ab0a666f1e046e52a83
         Path: /intro-to-oop-contd/projects-with-many-files.md
   -
-    Title: OOP Relationships
-    Description: "OOP Relationships, Inheritance, Composition, Practice: Inheritance, Practice: Composition"
+    Title: Intro to OOP Relationships
+    Description: "OOP Relationships, Inheritance, Practice: OOP Relationships"
     UID: 6aa5a5d28d6c39bc5381c77a1e222232
     SuccessCriteria:
       - success criteria
@@ -389,23 +389,30 @@ Standards:
       -
         Type: Lesson
         UID: 017e51e2f57ac181b0a4b89dd39e598d
-        Path: /oop-relationships/oop-relationships.md
+        Path: /intro-to-oop-relationships/oop-relationships.md
       -
         Type: Lesson
         UID: 13417be7f72da4eeb97ff9ce94f5df6a
-        Path: /oop-relationships/inheritance.md
-      -
-        Type: Lesson
-        UID: b1f8cf43e4ccc8039055e4f7b8cf6411
-        Path: /oop-relationships/composition.md
+        Path: /intro-to-oop-relationships/inheritance.md
       -
         Type: Lesson
         UID: e760a85b2f7705d0d4e42d26947b6f6c
-        Path: /oop-relationships/practice-inheritance.md
+        Path: /intro-to-oop-relationships/practice-oop-relationships.md
+  -
+    Title: Composition
+    Description: "Composition, Practice: Composition"
+    UID: 1jtO4N
+    SuccessCriteria:
+      - success criteria
+    ContentFiles:
+      -
+        Type: Lesson
+        UID: b1f8cf43e4ccc8039055e4f7b8cf6411
+        Path: /composition/composition.md
       -
         Type: Lesson
         UID: eedb1f62ad21bb5e478b414c25e17998
-        Path: /oop-relationships/practice-composition.md
+        Path: /composition/practice-composition.md
   -
     Title: Python OOP
     Description: "Intro to Design Patterns, Intro to Decorators, Static Methods and Class Methods"
